Add link to card table
