# api/model/card.js
@@ -2,15 +2,15 @@
 const knexFactory = require('./knexFactory.js');
 
 function Card(data) {
+  if(data.link) this.link = data.link;
   if(data.no) this.no = data.no;
   if(data.name) this.name = data.name;
-  if(data.link) this.link = data.link;
 }
 
 Card.createOrReplace = card => {
   let isNew = true;
   return knexFactory().then(knex => knex.transaction(tx =>
-    tx.count('no as count').from('cards').where('no', card.no)
+    tx.count('link as count').from('cards').where('link', card.link)
     .then(rows => rows[0].count)
     .then(count => {
       if(count === 0){
@@ -19,7 +19,7 @@ Card.createOrReplace = card => {
       else {
         isNew = false;
         return tx('cards')
-          .where('no', card.no).del()
+          .where('link', card.link).del()
           .then(() => tx.insert(card).into('cards'));
       }
     })))
