# api/swagger/swagger.yaml
@@ -156,17 +156,17 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
               
-  /Cards/{cardNo}:
+  /Cards/{link}:
     x-swagger-router-controller: cardController
     put:
       description: |
         Create or replace the Card with the given Number
       parameters:
         - in: path 
-          name: cardNo
+          name: link
           required: true
-          type: integer
-          format: int32
+          type: string
+          maxLength: 8
         - in: body
           name: card
           required: true
@@ -205,9 +205,9 @@ definitions:
   WriteCardHistory:
     type: object
     properties:
-      cardNo:
-        type: integer
-        format: int32
+      cardLink:
+        type: string
+        maxLength: 8
       listId: 
         type: string
         maxLength: 36
@@ -222,11 +222,10 @@ definitions:
         format: date
   ReadCardHistoryOrphan:
     type: object
-    description: Only one of cardNo or listId will be set
+    description: Only one of cardLink or listId will be set
     properties:
-      cardNo:
-        type: integer
-        format: int32
+      cardLink:
+        type: string
       listId:
         type: string
         maxLength: 36
@@ -262,10 +261,10 @@ definitions:
     type: object
     required: 
       - name
-      - link
+      - no
     properties:
       name:
         type: string
-      link:
-        type: string
-        maxLength: 8
+      no:
+        type: integer
+        format: int32
